Kubernetes/app/mails.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mails
  labels:
    app.kubernetes.io/name: mails
    microproject.tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mails
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mails
        microproject.tier: backend
    spec:
      containers:
        - name: mails
          image: microproject/mails:v1
      restartPolicy: Always
