Kubernetes/app/meetings.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetings
  labels:
    app.kubernetes.io/name: meetings
    microproject.tier: backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: meetings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meetings
  labels:
    app.kubernetes.io/name: meetings
    microproject.tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: meetings
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meetings
        microproject.tier: backend
    spec:
      containers:
        - name: meetings
          image: microproject/meetings:v1
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meetings
  labels:
    app.kubernetes.io/name: meetings
    microproject.tier: backend
  annotations:
    traefik.ingress.kubernetes.io/auth-url: http://keycloak/keycloak/realms/project_manager_realm/protocol/openid-connect/userinfo
    traefik.ingress.kubernetes.io/auth-response-headers: Authorization
    traefik.ingress.kubernetes.io/auth-type: forward
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/meeting
            pathType: Prefix
            backend:
              service:
                name: meetings
                port:
                  name: http
