Kubernetes/app/projects.yaml
apiVersion: v1
kind: Service
metadata:
  name: projects
  labels:
    app.kubernetes.io/name: projects
    microproject.tier: backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: projects
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects
  labels:
    app.kubernetes.io/name: projects
    microproject.tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: projects
  template:
    metadata:
      labels:
        app.kubernetes.io/name: projects
        microproject.tier: backend
    spec:
      containers:
        - name: projects
          image: microproject/projects:v1
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projects
  labels:
    app.kubernetes.io/name: projects
    microproject.tier: backend
  annotations:
    traefik.ingress.kubernetes.io/auth-url: http://users:8080/api/v1/user/auth
    traefik.ingress.kubernetes.io/auth-response-headers: Authorization
    traefik.ingress.kubernetes.io/auth-type: forward
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/project
            pathType: Prefix
            backend:
              service:
                name: projects
                port:
                  name: http
