Kubernetes/app/users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    microproject.tier: backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    microproject.tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: users
  template:
    metadata:
      labels:
        app.kubernetes.io/name: users
        microproject.tier: backend
    spec:
      containers:
        - name: users
          image: microproject/users:v1
          ports:
            - name: http
              containerPort: 8080
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    microproject.tier: backend
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  name: http
